--- a/index.html
+++ b/index.html
@@ -3,33 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  <main>
+    <div class="card">
+      <img src="images/image-victor.jpg" alt="" class="profile-pic">
+      <h2>Victor Crest <span>26</span> </h2>
+      <h3>London</h3>
+      <div class="stats">
+        <div class="numbers">
+          80K
+        </div>
+        <div class="title">
+          Followers
+        </div><div class="numbers">
+          803K
+        </div>
+        <div class="title">
+          Likes
+        </div>
+        <div class="numbers">
+          1.4K
+        </div>
+        <div class="title">
+          Photos
+        </div>
+      </div>  
+    </div>
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
+  </main>
+  
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Rich Walton</a>.
+  </footer>
 </body>
 </html>
