--- a/index.html
+++ b/index.html
@@ -11,38 +11,39 @@
  
 </head>
 <body>
-  <main>
-    <div class="card">
-      <img src="images/image-victor.jpg" alt="" class="profile-pic">
-      <h2>Victor Crest <span>26</span> </h2>
-      <h3>London</h3>
-      <div class="stats">
-        <div class="numbers">
-          80K
-        </div>
-        <div class="title">
-          Followers
-        </div><div class="numbers">
-          803K
-        </div>
-        <div class="title">
-          Likes
-        </div>
-        <div class="numbers">
-          1.4K
-        </div>
-        <div class="title">
-          Photos
-        </div>
-      </div>  
-    </div>
-
-  </main>
+  <div class="background">
+    <main>
+      <div class="card">
+        <img src="images/image-victor.jpg" alt="" class="profile-pic">
+        <h2>Victor Crest <span>26</span> </h2>
+        <h3>London</h3>
+        <div class="stats">
+          <div class="numbers">
+            80K
+          </div>
+          <div class="title">
+            Followers
+          </div><div class="numbers">
+            803K
+          </div>
+          <div class="title">
+            Likes
+          </div>
+          <div class="numbers">
+            1.4K
+          </div>
+          <div class="title">
+            Photos
+          </div>
+        </div>  
+      </div>
+    </main>
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Rich Walton</a>.
+    </footer>
+</div>
   
   
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Rich Walton</a>.
-  </footer>
 </body>
 </html>
